gap removed for title fix on desktop

--- a/src/pages/404/second404.module.css
+++ b/src/pages/404/second404.module.css
@@ -62,7 +62,6 @@
   .contentWrapper {
     align-items: flex-start;
     flex-direction: row;
-    gap: 28px;
   }
   .image {
     position: relative;
